<resources>
    <string name="app_name">KarWash and Auto Detailing</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register today!</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_password">Please input password.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Super Shine</string>
    <string name="nav_header_subtitle">World Class Washing and Detailing</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_services">Services</string>
    <string name="menu_history">History</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_landing">Landing</string>
    <string name="title_home">Home</string>
    <string name="title_services">Services</string>
    <string name="title_notifications">Notifications</string>
    <string name="textview">TextView</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="button3">Submit</string>

    <string name="editDate">Date</string>
    <string name="editTime">Time</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="action_stop" />
    <string name="channel_id" />


    <string name="btn_submit">SUBMIT</string>

    <string name="api_key">AIzaSyAwd6IzEHoZH84r7cfBdbSZz8nKS8nFJWo</string>

    <string name="buffing">Buffing</string>
    <string name="detailing">Detailing</string>
    <string name="enginewash">Engine wash</string>
    <string name="headlightscleaning">Headlights Cleaning</string>
    <string name="minorscratchesremoval">Minor Scratches Removal</string>
    <string name="normalwash">Normal Wash</string>
    <string name="underbodywash">Underbody Wash</string>
    <string name="watermarksremoval">Watermarks Removal</string>


    <string name="pick_date">Date</string>
    <string name="pick_time">Time</string>
    <string name="service">Please select the service of choice</string>
    <string name="google_maps_key" />
    <string name="enter_time">Enter Time</string>
    <string name="pick_location">Pick Location</string>
    <string name="submit">Submit</string>
    <string name="enter_date">Enter Date</string>

    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="view_services">VIEW SERVICES</string>
    <string name="make_a_booking">MAKE A BOOKING</string>
    <string name="contact_us">CONTACT US</string>


</resources>